[gd_scene load_steps=15 format=3 uid="uid://8cynf70m4wgb"]

[ext_resource type="PackedScene" uid="uid://c7kn1ggk81xe1" path="res://scenes/day_03/level_01/backgrounds/Day03Bg.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://cp4tq5frnbdcb" path="res://scenes/day_03/_shared/player/Player.tscn" id="2_7jo31"]
[ext_resource type="PackedScene" uid="uid://bp80vrxj2g20" path="res://scenes/day_03/level_01/enemies/Hive.tscn" id="2_wer3w"]
[ext_resource type="Script" path="res://scenes/day_03/level_01/Day03Level.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://blginm3tn0k1s" path="res://scenes/day_03/_shared/items/bird.tscn" id="7_4l07s"]
[ext_resource type="PackedScene" path="res://scenes/day_03/_shared/systems/StaminaSpawner.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://do4sxpr6sod1n" path="res://scenes/day_03/_shared/systems/WaveManager.tscn" id="8_h6wpu"]
[ext_resource type="PackedScene" path="res://scenes/day_03/_shared/systems/PowerUpSpawner.tscn" id="9"]
[ext_resource type="PackedScene" path="res://scenes/day_03/_shared/items/stormy_cloud.tscn" id="9_ec7kc"]
[ext_resource type="Script" path="res://scenes/day_03/_shared/systems/Level01Waves.gd" id="9_g5tp5"]
[ext_resource type="PackedScene" uid="uid://wlkw3c1bf7uc" path="res://scenes/day_03/_shared/ui/Day3Ui.tscn" id="10_inxwm"]
[ext_resource type="Resource" uid="uid://fwsyckhw66yi" path="res://resources/instances/Player01Day03Data.tres" id="11"]
[ext_resource type="Script" path="res://scenes/day_03/level_01/DroneShootManager.gd" id="12"]
[ext_resource type="PackedScene" uid="uid://b5d01sbijtn2d" path="res://scenes/_shared/ui/ResultsScreen.tscn" id="12_gnrla"]

[node name="Day03Level" type="Node"]
process_mode = 3
script = ExtResource("5")
Boss = ExtResource("2_wer3w")
Player = ExtResource("2_7jo31")

[node name="DroneShootManager" type="Node" parent="."]
process_mode = 1
script = ExtResource("12")

[node name="CooldownTimer" type="Timer" parent="DroneShootManager"]
process_mode = 1
one_shot = true

[node name="StaminaSpawner" parent="." instance=ExtResource("8")]
player_data = ExtResource("11")
StaminaItem = ExtResource("7_4l07s")

[node name="PowerUpSpawner" parent="." instance=ExtResource("9")]
PowerUpItem = ExtResource("9_ec7kc")

[node name="WaveManager" parent="." instance=ExtResource("8_h6wpu")]
WavesScript = ExtResource("9_g5tp5")

[node name="World" type="Node2D" parent="."]
process_mode = 1

[node name="Day03Bg" parent="World" instance=ExtResource("1")]

[node name="StartPosition" type="Marker2D" parent="World"]
position = Vector2(117, 286)

[node name="Interface" type="Node" parent="."]
process_mode = 1

[node name="Day3Ui" parent="Interface" instance=ExtResource("10_inxwm")]

[node name="ResultsScreenBuffet" parent="." instance=ExtResource("12_gnrla")]

[connection signal="level_state_changed" from="." to="Interface/Day3Ui" method="_on_day_03_level_level_state_changed"]
[connection signal="pause_state_changed" from="." to="Interface/Day3Ui" method="_on_day_03_level_pause_state_changed"]
[connection signal="waves_completed" from="." to="Interface/Day3Ui" method="_on_day_03_level_waves_completed"]
[connection signal="timeout" from="DroneShootManager/CooldownTimer" to="DroneShootManager" method="_on_cooldown_timer_timeout"]
[connection signal="all_waves_completed" from="WaveManager" to="." method="_on_wave_manager_all_waves_completed"]
[connection signal="all_waves_completed" from="WaveManager" to="DroneShootManager" method="_on_wave_manager_all_waves_completed"]
[connection signal="wave_completed" from="WaveManager" to="." method="_on_wave_manager_wave_completed"]
[connection signal="wave_completed" from="WaveManager" to="DroneShootManager" method="_on_wave_manager_wave_completed"]
[connection signal="wave_started" from="WaveManager" to="." method="_on_wave_manager_wave_started"]
[connection signal="wave_started" from="WaveManager" to="DroneShootManager" method="_on_wave_manager_wave_started"]
[connection signal="boss_alert_finished" from="Interface/Day3Ui" to="." method="_on_day_3_ui_boss_alert_finished"]
